--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -14,9 +14,7 @@ label {
     padding-left: 120 px; /* adjust if necessary */
     font-family:Arial, Helvetica, sans-serif;
 }
-input{
-    margin-bottom: 2%;
-}
+
  label > span {
     position: absolute;
     left: 0;
@@ -24,4 +22,12 @@ input{
 
 .error{
     color: red;
+}
+
+#name, #email, #password, #passConfirm{
+    margin-bottom: 2%;
+}
+
+#orgName, #orgRate{
+    margin-left: 1%;
 }
