shift table created with css

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -35,3 +35,15 @@ label {
 .memberLinks{
     margin-right: 2%;
 }
+
+table{
+    border-collapse: collapse;
+    width: 80%;
+    
+}
+
+th,td{
+    border: 1px solid black;
+    text-align: left;
+    padding: 8px;
+}
